--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "httpserver.h": "c"
   },
   "C_Cpp.default.includePath": [
-    "include"
+    "include",
+    "${workspaceFolder}/include"
   ]
 }
