--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ include/gameVars.h
 include/network.h
 include/utilities.h
 include/gameAction.h
+include/gameConsoleUI.h
+
 
 # Local History for Visual Studio Code
 .history/
